# ChangeLog for media-tv/w_scan
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/w_scan/ChangeLog,v 1.35 2013/06/15 17:30:01 hd_brummy Exp $

*w_scan-20130331 (15 Jun 2013)

  15 Jun 2013; Joerg Bornkessel <hd_brummy@gentoo.org> +w_scan-20130331.ebuild:
  bump; droped support for < vdr-1.7.3

*w_scan-20121111 (06 Jan 2013)

  06 Jan 2013; Joerg Bornkessel <hd_brummy@gentoo.org> +w_scan-20121111.ebuild:
  bump, fixed compile with dvb api 5.8

  23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> w_scan-20120525.ebuild:
  x86 stable wrt bug #429140

  13 Sep 2012; Agostino Sarubbo <ago@gentoo.org> w_scan-20120525.ebuild:
  Stable for amd64, wrt bug #429140

*w_scan-20120525 (04 Jun 2012)

  04 Jun 2012; Christian Ruppert <idl0r@gentoo.org> -w_scan-20120128.ebuild,
  +w_scan-20120525.ebuild:
  Version bump. Remove old version.

  28 May 2012; Johannes Huber <johu@gentoo.org> w_scan-20120415.ebuild:
  Stable for x86, wrt bug #417583

  26 May 2012; Agostino Sarubbo <ago@gentoo.org> w_scan-20120415.ebuild:
  Stable for amd64, wrt bug #417583

  25 May 2012; Samuli Suominen <ssuominen@gentoo.org> -w_scan-20110702.ebuild:
  old

*w_scan-20120415 (30 Apr 2012)

  30 Apr 2012; Christian Ruppert <idl0r@gentoo.org> -w_scan-20120112.ebuild,
  +w_scan-20120415.ebuild:
  Version bump

  15 Feb 2012; Joerg Bornkessel <hd_brummy@gentoo.org> w_scan-20110702.ebuild,
  w_scan-20120112.ebuild, w_scan-20120128.ebuild:
  move media-tv to virtual/linuxtv-dvb-headers, bug #403929

*w_scan-20120128 (10 Feb 2012)

  10 Feb 2012; Christian Ruppert <idl0r@gentoo.org> -w_scan-20111203.ebuild,
  +w_scan-20120128.ebuild:
  Version bump.

  16 Jan 2012; Christian Ruppert <idl0r@gentoo.org> w_scan-20120112.ebuild:
  Fix media-tv/linuxtv-dvb-headers dependency

*w_scan-20120112 (14 Jan 2012)

  14 Jan 2012; Christian Ruppert <idl0r@gentoo.org> +w_scan-20120112.ebuild:
  Version bump.
